--- a/practice-two/src/styles/modules/info.scss
+++ b/practice-two/src/styles/modules/info.scss
@@ -2,7 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  width: 100%;
+  max-width: 100%;
 
   &__head {
     font-size: toRem(24px);
@@ -29,6 +29,7 @@
     flex-wrap: nowrap;
     justify-content: space-between;
     text-align: left;
+    width: 100%;
 
     &__item--line {
       width: 33.33%;
