--- a/practice-two/src/styles/layouts/arrival.scss
+++ b/practice-two/src/styles/layouts/arrival.scss
@@ -7,6 +7,7 @@
 
   &__title {
     margin-bottom: toRem(32px);
+    font-size: toRem(32px);
   }
 
   &__products {
@@ -37,6 +38,7 @@
 
     &__title {
       margin-bottom: toRem(55px);
+      font-size: toRem(48px);
     }
 
     &__product {
