--- a/practice-two/src/styles/layouts/browse.scss
+++ b/practice-two/src/styles/layouts/browse.scss
@@ -9,9 +9,10 @@
 
   &__title {
     padding: toRem(0px) toRem(56px);
+    font-size: toRem(32px);
   }
 
-  &__wrapper {
+  &__wrapper, &__wrapper-xxl {
     flex-wrap: wrap;
     gap: toRem(8px);
     padding: toRem(28px) 0 toRem(13px);
@@ -25,7 +26,7 @@
 
   }
 
-  &__wrapper-desktop {
+  &__wrapper-xxl {
     display: none;
   }
 }
@@ -36,16 +37,18 @@
     width: 100%;
     margin-bottom: toRem(80px);
 
+    &__title {
+      font-size: toRem(48px);
+    }
+
     &__img {
       flex-basis: 0;
       max-width: 100%;
     }
 
-    &__wrapper-desktop {
+    &__wrapper-xxl {
       display: flex;
       gap: toRem(20px);
-      flex-wrap: wrap;
-      justify-content: center;
       padding-top: toRem(64px);
     }
 
