--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -10,24 +10,27 @@
 
   &__title {
     font-size: toRem(36px);
+    margin: 0 auto;
   }
 
   &__content {
     @extend %flexbox-items-wraped;
     padding: toRem(40px) math.div(16, 390) * 100% 0;
     gap: toRem(20px);
-    max-width: toRem(596px);
     margin-left: auto;
+    width: 100%;
   }
 
   &__btn {
     margin-top: toRem(4px);
     padding: toRem(15px)toRem(141.5px);
     max-height: 48px;
+    width: 100%;
   }
 
   &__desc {
     font-size: toRem(14px);
+    margin: 0 auto;
   }
 
   &__img {
@@ -51,7 +54,7 @@
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: $xxl) {
   .banner {
     background-image: url('../assets/images/banners/rectangle.png');
     background-repeat: no-repeat;
@@ -81,6 +84,7 @@
       margin-bottom: toRem(16px);
       @include min-size(toRem(211px),toRem(52px));
       margin: 0;
+      max-width: toRem(218px);
     }
 
     &__desc {
