--- a/practice-two/src/styles/layouts/top-selling.scss
+++ b/practice-two/src/styles/layouts/top-selling.scss
@@ -28,10 +28,11 @@
 
   &__btn {
     padding: toRem(15px)toRem(153.5px);
+    width: 100%;
   }
 }
 
-@media (min-width: 1440px) {
+@media (min-width: $xxl) {
   .top-selling {
 
     padding: toRem(64px) toRem(0px) toRem(80px) toRem(0px);
@@ -47,6 +48,7 @@
 
     &__btn {
       padding: (15px) toRem(80px);
+      max-width: toRem(218px);
     }
   }
 }
