--- a/practice-two/src/styles/layouts/arrival.scss
+++ b/practice-two/src/styles/layouts/arrival.scss
@@ -1,9 +1,7 @@
 .arrival {
   padding-top: toRem(50px);
-  padding-bottom: toRem(40px);
   margin-left: math.div(16, 390) * 100%;
   text-align: center;
-  border-bottom: 1px solid $line-color;
 
   &__title {
     margin-bottom: toRem(32px);
@@ -27,6 +25,12 @@
     text-align: left;
   }
 
+  &__box-btn {
+    padding-bottom: toRem(40px);
+    border-bottom: 1px solid $line-color;
+    width:  math.div(358, 374) * 100%;
+  }
+
   &__btn {
     padding: toRem(15px) toRem(153.5px);
     width: 100%;
@@ -35,7 +39,8 @@
 
 @media (min-width: $xxl) {
   .arrival {
-    padding: toRem(72px) toRem(0px) toRem(64px) toRem(0px);
+    margin: 0;
+    padding: toRem(72px) toRem(0px) 0 toRem(0px);
 
     &__title {
       margin-bottom: toRem(55px);
@@ -44,6 +49,11 @@
 
     &__product {
       margin-bottom: toRem(36px);
+    }
+
+    &__box-btn {
+      width: 100%;
+      padding-bottom: toRem(64px);
     }
 
     &__btn {
