--- a/practice-two/src/styles/layouts/top-selling.scss
+++ b/practice-two/src/styles/layouts/top-selling.scss
@@ -28,12 +28,14 @@
 
   &__btn {
     padding: toRem(15px)toRem(153.5px);
-    width: 100%;
+    margin-right: math.div(16, 390) * 100%;
+    width:  math.div(358, 374) * 100%;
   }
 }
 
 @media (min-width: $xxl) {
   .top-selling {
+    margin: 0;
 
     padding: toRem(64px) toRem(0px) toRem(80px) toRem(0px);
 
