--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -11,6 +11,7 @@
   &__title {
     font-size: toRem(36px);
     margin: 0 auto;
+    line-height: 57px;
   }
 
   &__content {
@@ -31,14 +32,13 @@
   &__desc {
     font-size: toRem(14px);
     margin: 0 auto;
+    line-height: toRem(20px);
   }
 
   &__img {
     background-image: url('../assets/images/banners/bg-banner.svg');
-    background-repeat: no-repeat;
-    @include min-size(toRem(390px), toRem(448px));
-    @include max-size(toRem(596px), toRem(448px));
     @extend %flexbox-items-space-between;
+    @include min-size(toRem(390px), toRem(448px));
     margin: 0 auto;
     height: 100%;
   }
@@ -54,7 +54,7 @@
   }
 }
 
-@media (min-width: $xxl) {
+@media (min-width: $desktop) {
   .banner {
     background-image: url('../assets/images/banners/rectangle.png');
     background-repeat: no-repeat;
@@ -82,17 +82,20 @@
       padding: toRem(15px) toRem(67.5px);
       margin-top: toRem(0px);
       margin-bottom: toRem(16px);
-      @include min-size(toRem(211px),toRem(52px));
+      @include min-size(toRem(211px), toRem(52px));
       max-width: toRem(218px);
     }
 
     &__desc {
       font-size: toRem(16px);
+      line-height: toRem(22px);
     }
 
     &__img {
       background-image: none;
       min-width: toRem(744px);
+      height: 663px;
+      @include min-size(toRem(744px), toRem(663px));
     }
 
     &__img-left {
