--- a/practice-two/src/styles/layouts/comment.scss
+++ b/practice-two/src/styles/layouts/comment.scss
@@ -59,7 +59,7 @@
   }
 }
 
-@media (min-width: $xxl) {
+@media (min-width: $desktop) {
   .comment {
     width: 100%;
     margin-bottom: toRem(80.42px);
