--- a/practice-two/src/styles/bases/variable.scss
+++ b/practice-two/src/styles/bases/variable.scss
@@ -12,5 +12,5 @@ $line-color: rgba(0, 0, 0, 0.10);
 $bg-product: rgba(255, 51, 51, 0.1);
 
 //size
-$size : 20px;
-$xxl : 1440px;
+$basic-font-size : 20px;
+$desktop : 1440px;
