--- a/practice-two/src/styles/layouts/header.scss
+++ b/practice-two/src/styles/layouts/header.scss
@@ -23,7 +23,7 @@
   }
 }
 
-@media (min-width: $xxl) {
+@media (min-width: $desktop) {
   .navbar {
     display: grid;
     grid-template-columns: toRem(160px) toRem(321px) 1fr toRem(62px);
