--- a/practice-two/src/styles/utils/functions.scss
+++ b/practice-two/src/styles/utils/functions.scss
@@ -2,7 +2,7 @@
 
 // this function convert px to rem
 // pxValue is the px value, $size this is font-size html (20px)
-// math.div($pxValue, $size) * 1rem this is ( px / 20px ) * 1rem
+// math.div($pxValue, $basic-font-size ) * 1rem this is ( px / 20px ) * 1rem
 @function toRem($pxValue) {
-  @return math.div($pxValue, $size) * 1rem;
+  @return math.div($pxValue, $basic-font-size) * 1rem;
 }
