--- a/practice-two/src/styles/layouts/top-selling.scss
+++ b/practice-two/src/styles/layouts/top-selling.scss
@@ -13,6 +13,7 @@
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: toRem(16px);
+    height: max-content;
 
     overflow: auto;
 
