add line-height for component desc

--- a/practice-two/src/styles/modules/desc.scss
+++ b/practice-two/src/styles/modules/desc.scss
@@ -3,4 +3,11 @@
   color: $primary-color;
   font-weight: 400;
   display: block;
+  line-height: 20px;
+}
+
+@media (min-width: $desktop) {
+  .desc {
+    line-height: 22px;
+  }
 }
