--- a/practice-two/src/styles/index.css
+++ b/practice-two/src/styles/index.css
@@ -283,13 +283,12 @@ html {
 .banner__btn {
   margin-top: 0.2rem;
   padding: 0.75rem 7.075rem;
-  min-height: 52px;
+  height: 52px;
   width: 100%;
 }
 .banner__desc {
   font-size: 0.7rem;
   margin: 0 auto;
-  line-height: 1rem;
 }
 .banner__img {
   background-image: url("../assets/images/banners/bg-banner.svg");
@@ -339,7 +338,6 @@ html {
   }
   .banner__desc {
     font-size: 0.8rem;
-    line-height: 1.1rem;
   }
   .banner__img {
     background-image: none;
@@ -489,7 +487,6 @@ html {
 .comment-item__desc {
   font-size: 14px;
   font-weight: 400;
-  line-height: 1rem;
   color: rgba(0, 0, 0, 0.6);
 }
 
@@ -521,9 +518,8 @@ html {
     margin-left: 0.3125rem;
   }
   .comment-item__desc {
-    font-size: 0.7rem;
+    font-size: 0.8rem;
     font-weight: 400;
-    line-height: 1.1rem;
   }
   .comment-feedback {
     margin-bottom: 0.75rem;
@@ -637,6 +633,7 @@ html {
     margin: 0;
     font-size: 2rem;
     flex-basis: 50%;
+    line-height: 45px;
   }
   .footer__contact {
     padding: 1.8rem 3.2rem;
@@ -883,8 +880,14 @@ html {
   color: rgba(0, 0, 0, 0.6);
   font-weight: 400;
   display: block;
+  line-height: 20px;
 }
 
+@media (min-width: 1440px) {
+  .desc {
+    line-height: 22px;
+  }
+}
 .evaluate-product {
   margin-bottom: 0.2rem;
 }
@@ -967,6 +970,8 @@ html {
 @media (min-width: 1440px) {
   .product__img {
     margin-bottom: 0.8rem;
+    width: 14.75rem;
+    height: 14.9rem;
   }
   .product__name {
     margin-bottom: 0.4rem;
