--- a/practice-two/src/styles/layouts/banner.scss
+++ b/practice-two/src/styles/layouts/banner.scss
@@ -25,14 +25,13 @@
   &__btn {
     margin-top: toRem(4px);
     padding: toRem(15px)toRem(141.5px);
-    min-height: 52px;
+    height: 52px;
     width: 100%;
   }
 
   &__desc {
     font-size: toRem(14px);
     margin: 0 auto;
-    line-height: toRem(20px);
   }
 
   &__img {
@@ -88,7 +87,6 @@
 
     &__desc {
       font-size: toRem(16px);
-      line-height: toRem(22px);
     }
 
     &__img {
