--- a/practice-two/src/styles/modules/evaluate.scss
+++ b/practice-two/src/styles/modules/evaluate.scss
@@ -4,6 +4,10 @@
   &__img {
     @include img-size(toRem(15.47px), toRem(15.47px));
   }
+
+  &__img--half {
+    @include img-size(toRem(7.36px), toRem(13.99px));
+  }
 }
 
 .evaluate-comment {
@@ -14,8 +18,13 @@
 
 @media (min-width: $desktop) {
   .evaluate-product {
+
     &__img {
       @include img-size(toRem(18.49px), toRem(18.49px));
+    }
+
+    &__img--half {
+      @include img-size(toRem(9.79px), toRem(16.72px));
     }
   }
 
