--- a/practice-two/src/styles/layouts/header.scss
+++ b/practice-two/src/styles/layouts/header.scss
@@ -31,6 +31,7 @@
     font-size: 0.5rem;
     font-size: toRem(16px);
     align-items: center;
+    padding: toRem(24px) 0;
 
     &__nav,
     &__option-search {
