--- a/practice-two/src/styles/index.css
+++ b/practice-two/src/styles/index.css
@@ -236,6 +236,7 @@ html {
     font-size: 0.5rem;
     font-size: 0.8rem;
     align-items: center;
+    padding: 1.2rem 0;
   }
   .navbar__nav, .navbar__option-search {
     display: none;
@@ -502,7 +503,7 @@ html {
     margin-bottom: 4.021rem;
   }
   .comment__heading {
-    margin-bottom: 1rem;
+    margin-bottom: 2rem;
   }
   .comment__title {
     font-size: 2.4rem;
